login message added

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #}
 
 # Jwt secret & token time {
-jwt.secret=your_secret_key
+jwt.secret=your_secret_key_14-09-2024
 #30 minutes in milliseconds
 jwt.expiration=1800000
 #}
