--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,6 +8,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #}
 
+# Data initialization{
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:schema.sql
+spring.datasource.data=classpath:init.sql
+#}
+
 # Jwt secret & token time {
 jwt.secret=your_secret_key
 #30 minutes in milliseconds
