--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,30 +1,29 @@
-# MySql Connection{
+# MySQL Connection
 spring.application.name=MyApplication
 spring.datasource.url=jdbc:mysql://localhost:3306/site_coupons_springboot?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-#}
 
-# Data initialization{
+# Hibernate DDL Configuration
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+# Data initialization
 spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath:schema.sql
 spring.datasource.data=classpath:init.sql
-#}
 
-# Jwt secret & token time {
+# JWT secret & token time
 jwt.secret=your_secret_key_14-09-2024
-#30 minutes in milliseconds
+# 30 minutes in milliseconds
 jwt.expiration=1800000
-#}
 
-# Logger for deBugging {
-#logging.level.org.springframework=DEBUG
-#logging.level.org.hibernate=DEBUG
+# Logger for Debugging
+# logging.level.org.springframework=DEBUG
+# logging.level.org.hibernate=DEBUG
 spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform
-#}
 
-# spring-boot logo changer
+# Spring Boot logo changer
 spring.banner.location=classpath:logo.ascii
